--- a/main.css
+++ b/main.css
@@ -19,6 +19,13 @@
   /* White and black: both for fonts and backgrounds */
   --clr-white: white;
   --clr-black: black;
+
+
+  /* Transitions time */
+  --trans-tm-links: .3s ease all;
+  --trans-tm-colors: .5s ease all;
+  --trans-tm-boxes: .5s ease all;
+  --trans-tm-flip-box: .8s;
 }
 
 /* ---------- GENERAL ---------- */
@@ -33,7 +40,7 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 1.2em;
   color: var(--clr-green-dk-1);
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark {
@@ -56,6 +63,7 @@ body.dark {
 
 #navigation {
   padding: 1.5em 2em;
+  transition: var(--trans-tm-boxes);
 }
 
 #nav-title {
@@ -69,14 +77,18 @@ body.dark {
 
 #nav-title span {
   color: var(--clr-green-lt-2);
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #nav-title span {
   color: var(--clr-white);
 }
 
-
+@media (max-width: 28em) {
+  #navigation {
+    padding: 1.5em 1em;
+  }
+}
 
 /* ---------- MENU ---------- */
 
@@ -89,7 +101,7 @@ body.dark #nav-title span {
   top: 0;
   background-color: rgba(0,0,0, 0.9);
   overflow-x: hidden;
-  transition: .5s;
+  transition: var(--trans-tm-boxes);
 }
 
 #menu-content {
@@ -105,7 +117,7 @@ body.dark #nav-title span {
   padding: 2rem 0 2rem 3rem;
   text-decoration: none;
   color: var(--clr-white);
-  transition: .3s;
+  transition: var(--trans-tm-links);
 }
 
 #menu-content #menu-links-bottom {
@@ -127,13 +139,13 @@ body.dark #nav-title span {
 #menu-btn {
   position: fixed;
   z-index: 1;
-  right: 4em;
+  right: 2em;
   top: 2em;
   padding: 1rem;
   background-color: var(--clr-green-lt-3);
   border-radius: 50px;
   cursor: pointer;
-  transition: .5s;
+  transition: var(--trans-tm-boxes);
 }
 
 body.dark #menu-btn {
@@ -145,7 +157,7 @@ body.dark #menu-btn {
   height: 5px;
   background-color: #333;
   margin: 6px 0;
-  transition: 0.4s;
+  transition: var(--trans-tm-boxes);
 }
 
 .change .menu-btn-bar1 {
@@ -160,14 +172,21 @@ body.dark #menu-btn {
   transform: translate(0, -11px) rotate(45deg);
 }
 
+@media (max-width: 26em) {
+  #menu-btn {
+    top: 6em;
+  }
+}
+
 
 /* ---------- THEME TOGGLE - SWITCH ---------- */
 
 #theme-toggle {
   position: fixed;
   z-index: 1;
-  right: 2em;
-  bottom: 2em;
+  right: 1em;
+  bottom: 1.4em;
+  transition: var(--trans-tm-boxes);
 }
 
 #switch-btn {
@@ -179,7 +198,7 @@ body.dark #menu-btn {
   cursor: pointer;
   display: flex;
   outline: none;
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 #switch-btn span {
@@ -209,9 +228,21 @@ body.dark #menu-btn {
   left: 0;
   right: unset;
   border-radius: 100px;
-  transition: .3s ease all;
   box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
   z-index: 1;
+  transition: var(--trans-tm-boxes);
+}
+
+@media (max-width: 62em) {
+  #theme-toggle {
+    bottom: 6.2em;
+  }
+}
+
+@media (max-width: 35em) {
+  #theme-toggle {
+    bottom: 10em;
+  }
 }
 
 
@@ -223,6 +254,7 @@ body.dark #menu-btn {
   grid-template-columns: 1fr 1fr;
   margin: 8em 4em 8em;
   font-size: 1.3em;
+  transition: var(--trans-tm-boxes);
 }
 
 #hero-intro a ion-icon {
@@ -233,7 +265,7 @@ body.dark #menu-btn {
 
 #hero-intro a {
   color: var(--clr-black);
-  transition: .3s;
+  transition: var(--trans-tm-links);
 }
 
 #hero-intro a:hover, #hero-intro a:focus {
@@ -253,11 +285,13 @@ body.dark #hero-intro a:hover, body.dark #hero-intro a:focus {
   margin: auto;
   padding-top: 1em;
   /* border: 1px solid black; */
+  transition: var(--trans-tm-boxes);
 }
 
 #hero-img {
   display: flex;
   /* border: 1px solid black; */
+  transition: var(--trans-tm-boxes);
 }
 
 .hero-img {
@@ -273,7 +307,7 @@ body.dark #hero-intro a:hover, body.dark #hero-intro a:focus {
 
 #hero-intro span, #hero-intro p {
   color: var(--clr-green-lt-2);
-  transition: .3s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #hero-intro span, body.dark #hero-intro p {
@@ -309,17 +343,24 @@ body.dark #hero-intro span, body.dark #hero-intro p {
   }
 }
 
+@media (max-width: 28em) {
+  #hero {
+    margin: 2em 1em;
+  }
+}
+
 
 /* ---------- ABOUT ---------- */
 
 #about {
   margin: 8em;
+  transition: var(--trans-tm-boxes);
 }
 
 #about-desc h3, #about-skills h3 {
   color: var(--clr-green-lt-2);
   padding: 2.5rem 0 0 1rem;
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #about-desc h3, body.dark #about-skills h3 {
@@ -328,12 +369,13 @@ body.dark #about-desc h3, body.dark #about-skills h3 {
 
 #about-desc p {
   padding-left: 12rem;
+  transition: var(--trans-tm-boxes);
 }
 
 #about-location {
   color: var(--clr-green-lt-1);
   font-style: italic;
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #about-location {
@@ -344,7 +386,7 @@ body.dark #about-location {
   width: 2.5rem;
   height: 2.5rem;
   margin-left: 2.5rem;
-  transition: .3s;
+  transition: var(--trans-tm-boxes);
 }
 
 body.dark #skills-cnt ion-icon {
@@ -371,6 +413,20 @@ body.dark #skills-cnt img:hover {
   #about {
     margin: 8em 4em;
   }
+  
+  #about-desc p {
+    padding-left: 9rem;
+  }
+}
+
+@media (max-width: 28em) {
+  #about {
+    margin: 6em 1em;
+  }
+
+  #about-desc p {
+    padding-left: 6rem;
+  }
 }
 
 
@@ -378,12 +434,13 @@ body.dark #skills-cnt img:hover {
 
 #resume {
   margin: 15em 8em;
+  transition: var(--trans-tm-boxes);
 }
 
 #resume h2 {
   color: var(--clr-green-lt-2);
   padding: 2.5rem 0 0 1rem;
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #resume h2 {
@@ -395,6 +452,7 @@ body.dark #resume h2 {
   grid-template-columns: 1fr 1fr;
   margin: 3em 0;
   /* border: 1px solid black; */
+  transition: var(--trans-tm-boxes);
 }
 
 #resume-box {
@@ -402,6 +460,7 @@ body.dark #resume h2 {
   height: 5em;
   margin: auto;
   /* border: 1px solid black; */
+  transition: var(--trans-tm-boxes);
 }
 
 .resume-btn {
@@ -418,7 +477,7 @@ body.dark #resume h2 {
 	background-color: var(--clr-green-lt-4);
 	text-shadow: 1px 1px 1px var(--clr-green-lt-2);
   box-shadow: 4px 4px 0px 0px var(--clr-green-lt-2);
-  transition: .3s;
+  transition: var(--trans-tm-boxes);
 }
 
 body.dark .resume-btn {
@@ -456,14 +515,14 @@ body.dark .resume-btn:active {
 }
 
 @media (max-width: 55em) {
+  #resume {
+    margin: 12em 8em;
+  }
+
   #resume-grid {
     display: flex;
     flex-direction: column;
     margin: 0;
-  }
-
-  #resume {
-    margin: 12em 8em;
   }
 
   #resume-box {
@@ -477,13 +536,17 @@ body.dark .resume-btn:active {
 }
 
 @media (max-width: 35em) {
-  .resume-btn {
-    padding: .5em 1em;
+  #resume {
+    margin: 12em 4em;
   }
 
   #resume-box {
     width: 9.5em;
     height: 3.5em;
+  }
+
+  .resume-btn {
+    padding: .5em 1em;
   }
 }
 
@@ -498,7 +561,7 @@ body.dark .resume-btn:active {
 
 #portfolio > h2 {
   color: var(--clr-green-lt-2);
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #portfolio > h2 {
@@ -510,6 +573,7 @@ body.dark #portfolio > h2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1.5em;
+  transition: var(--trans-tm-boxes);
 }
 
 /* .portfolio-grid-elem {
@@ -521,6 +585,7 @@ body.dark #portfolio > h2 {
   width: 20em;
   height: 15em;
   margin: auto;
+  transition: var(--trans-tm-boxes);
 }
 
  /* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
@@ -538,7 +603,7 @@ body.dark #portfolio > h2 {
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform var(--trans-tm-flip-box);
   transform-style: preserve-3d;
 }
 
@@ -560,7 +625,7 @@ body.dark #portfolio > h2 {
 .flip-box-front {
   background-color: var(--clr-green-lt-4);
   color: var(--clr-green-dk-1);
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark .flip-box-front {
@@ -581,10 +646,12 @@ body.dark .flip-box-back {
 
 .flip-box-front h2, .flip-box-back h2 {
   padding: 1.3em .4em .8em;
+  transition: var(--trans-tm-boxes);
 }
 
 .flip-box-front p, .flip-box-back p {
   padding: .2em .4em;
+  transition: var(--trans-tm-boxes);
 }
 
 .flip-box-back a {
@@ -609,6 +676,31 @@ body.dark .flip-box-back {
   }
 }
 
+@media (max-width: 27.5em) {
+  .portfolio-grid-box {
+    width: 15em;
+  }
+
+  .flip-box-front h2, .flip-box-back h2 {
+    padding: .4em .2em .4em;
+  }
+
+  .flip-box-front p, .flip-box-back p {
+    padding: 0;
+  }
+}
+
+@media (max-width: 24em) {
+  .portfolio-grid-box {
+    width: 10em;
+  }
+
+  .flip-box-front h2, .flip-box-back h2 {
+    padding: 0;
+    margin: 0;
+  }
+}
+
 
 /* ---------- FOOTER ---------- */
 
@@ -618,7 +710,7 @@ body.dark .flip-box-back {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
-  transition: .5s;
+  transition: var(--trans-tm-colors);
 }
 
 body.dark #footer {
@@ -632,7 +724,7 @@ body.dark #footer {
 
 #footer-links a {
   color: var(--clr-black);
-  transition: .3s;
+  transition: var(--trans-tm-links);
 }
 
 #footer-links a:hover, #footer-links a:focus {
