Theme toggle switch repositioned for a better navigation with mobile screens.

--- a/main.css
+++ b/main.css
@@ -230,6 +230,12 @@ body.dark #menu-btn {
   transition: var(--trans-tm-boxes);
 }
 
+@media (max-width: 28em) {
+  #theme-toggle {
+    margin-top: 2em;
+  }
+}
+
 
 
 /* ---------- HERO ---------- */
